<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginModel"
            type="com.example.dogwalker.view.LoginFragment" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<a href="https://www.freepik.com/free-photos-vectors/dog">DogRequest vector created by studiogstock - www.freepik.com</a>-->

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/app_name"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/phone_number"
                app:layout_constraintStart_toStartOf="@+id/phone_number"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            <Button
                android:id="@+id/login_button"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login_button"
                app:layout_constraintEnd_toEndOf="@id/textView2"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

            <Button
                android:id="@+id/register_button"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="132dp"
                android:text="@string/register_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/textView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/register_invitation"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>