<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/delius"
                android:text="Register Walker"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:fontFamily="@font/delius"
                android:hint="Max Weight"
                android:inputType="textPersonName"
                android:numeric="integer"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/max_distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/delius"
                android:hint="Max Distance"
                android:inputType="textPersonName"
                android:numeric="integer"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/weight_text"
                app:layout_constraintStart_toStartOf="@+id/weight_text"
                app:layout_constraintTop_toBottomOf="@+id/weight_text" />

            <EditText
                android:id="@+id/max_duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/delius"
                android:hint="Max Walk Duration"
                android:inputType="textPersonName"
                android:numeric="decimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/max_distance_text"
                app:layout_constraintStart_toStartOf="@+id/max_distance_text"
                app:layout_constraintTop_toBottomOf="@+id/max_distance_text" />

            <EditText
                android:id="@+id/pricing_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/delius"
                android:hint="Pricing"
                android:inputType="textPersonName"
                android:numeric="integer"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/max_duration_text"
                app:layout_constraintStart_toStartOf="@+id/max_duration_text"
                app:layout_constraintTop_toBottomOf="@+id/max_duration_text" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="16dp"
                android:text="@string/register_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/scrollView5"
                app:layout_constraintStart_toStartOf="@+id/scrollView5"
                app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

            <ScrollView
                android:id="@+id/scrollView5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="@+id/pricing_text"
                app:layout_constraintStart_toStartOf="@+id/pricing_text"
                app:layout_constraintTop_toBottomOf="@+id/pricing_text">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/delius"
                        android:hint="Description"
                        android:inputType="textLongMessage|textMultiLine|textPersonName"
                        android:textAlignment="center" />
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/delius"
                android:text="@string/kg"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/weight_text"
                app:layout_constraintStart_toEndOf="@+id/weight_text"
                app:layout_constraintTop_toTopOf="@+id/weight_text" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="18dp"
                android:fontFamily="@font/delius"
                android:text="@string/km"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/max_distance_text"
                app:layout_constraintStart_toEndOf="@+id/max_distance_text"
                app:layout_constraintTop_toTopOf="@+id/max_distance_text" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/delius"
                android:text="@string/hr"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/max_duration_text"
                app:layout_constraintStart_toEndOf="@+id/max_duration_text"
                app:layout_constraintTop_toTopOf="@+id/max_duration_text" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/delius"
                android:text="@string/rp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/pricing_text"
                app:layout_constraintStart_toEndOf="@+id/pricing_text"
                app:layout_constraintTop_toTopOf="@+id/pricing_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>